--- a/multireg/vignettes/vineger.Rmd
+++ b/multireg/vignettes/vineger.Rmd
@@ -9,50 +9,44 @@ vignette: >
   %\VignetteEncoding{UTF-8}
 ---
 
-Vignettes are long form documentation commonly included in packages. Because they are part of the distribution of the package, they need to be as compact as possible. The `html_vignette` output type provides a custom style sheet (and tweaks some options) to ensure that the resulting html is as small as possible. The `html_vignette` format:
 
-- Never uses retina figures
-- Has a smaller default figure size
-- Uses a custom CSS stylesheet instead of the default Twitter Bootstrap style
+The multireg package calculates simple and multipel linear regression. The **linreg** function fits the regressen model using the ordinary least square method. Thereon, you get an object of class **linreg** containing the estimated beta coefficients with variance, residuals and their variance, fitted values, t-values, p-values and degrees of freedom. The residuals and the standardized residuals in the object of class **linreg** can also be plotted
+against the fitted values. 
 
-## Vignette Info
-
-Note the various macros within the `vignette` section of the metadata block above. These are required in order to instruct R how to build the vignette. Note that you should change the `title` field and the `\VignetteIndexEntry` to match the title of your vignette.
-
-## Styles
-
-The `html_vignette` template includes a basic CSS theme. To override this theme you can specify your own CSS in the document metadata as follows:
-
-    output: 
-      rmarkdown::html_vignette:
-        css: mystyles.css
-
-## Figures
-
-The figure sizes have been customised so that you can easily put two images side-by-side. 
-
-```{r, fig.show='hold'}
-plot(1:10)
-plot(10:1)
+## The linreg function
+Below is an example using the **linreg** function with the iris data set. 
+```{r}
+library(multireg)
+linreg_object<-linreg(formula = Sepal.Width ~ Sepal.Length, data= iris)
+names(linreg_object)
 ```
 
-You can enable figure captions by `fig_caption: yes` in YAML:
+Different values from the object of class **linreg** can be obtained using following functions: 
 
-    output:
-      rmarkdown::html_vignette:
-        fig_caption: yes
-
-Then you can use the chunk option `fig.cap = "Your figure caption."` in **knitr**.
-
-## More Examples
-
-You can write math expressions, e.g. $Y = X\beta + \epsilon$, footnotes^[A footnote here.], and tables, e.g. using `knitr::kable()`.
-
-```{r, echo=FALSE, results='asis'}
-knitr::kable(head(mtcars, 10))
+```{r, eval=FALSE}
+coef(linreg_object) # prints the coefficients
+predict(linreg_object) # prints the fitted values
+resid(linreg_object)# # prints the resiudals 
+print(linreg_object) # prints the equation and the beta coefficients 
+summary(linreg_object) # an output similar to the summary() statement of lm-objects. 
 ```
 
-Also a quote using `>`:
+An example of the **summary()** function for class **linreg**: 
 
-> "He who gives up [code] safety for [code] speed deserves neither."
-([via](https://twitter.com/hadleywickham/status/504368538874703872))
+```{r, echo=FALSE}
+summary(linreg_object)
+
+```
+
+## The plot function
+
+An object of class **linreg** can be visualized in two different plots. The first one plots the residuals against the fitted values, and the second plots the square root of the absolute value of the standardized residuals aganst the fitted values. The way to do this is wih the **plot()** function: 
+
+```{r, fig.width=7, fig.height=4}
+library(ggplot2)
+library(gridExtra)
+plot(linreg_object)
+
+```
+
+
